--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      overflow-x: hidden; /* Evita barra de rolagem horizontal */
+      overflow-x: hidden;
     }
 
-    /* Estilo do menu superior */
     .navbar {
       background-color: #1a1a1a;
-      padding: 10px 20px;
+      padding: 15px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -38,6 +37,12 @@
       font-weight: bold;
       color: #ff5f5f;
       text-decoration: none;
+    }
+
+    .navbar .logo img {
+      height: 50px;
+      width: auto;
+      display: block;
     }
 
     .navbar .nav-links {
@@ -87,59 +92,124 @@
       background: #ff8080;
     }
 
-    /* Contêiner principal */
     .main-container {
       display: flex;
       flex-grow: 1;
-      padding-top: 60px; /* Espaço para o menu fixo */
-      min-height: calc(100vh - 60px - 200px); /* Ajusta para o rodapé */
-      transition: margin-left 0.3s ease; /* Transição suave para o conteúdo principal */
-      position: relative; /* Necessário para centralização absoluta */
+      padding-top: 60px;
+      min-height: calc(100vh - 60px - 200px);
+      transition: margin-left 0.3s ease;
+      position: relative;
     }
 
-    /* Estilos do menu lateral */
     .sidebar {
       width: 240px;
       background-color: #1a1a1a;
       padding: 20px;
       box-sizing: border-box;
-      position: absolute; /* Posicionamento absoluto para não afetar o centro */
-      top: 60px; /* Alinha abaixo do menu superior */
-      bottom: 0;
-      transition: transform 0.3s ease; /* Animação de retrair/expandir */
+      position: fixed;
+      top: 60px;
+      transition: transform 0.3s ease;
+      z-index: 999;
+      height: auto;
+      min-height: fit-content;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
 
     .sidebar.retracted {
-      transform: translateX(-100%); /* Esconde o menu lateral */
+      transform: translateX(-100%);
     }
 
     .sidebar ul {
       list-style: none;
       padding: 0;
+      margin: 0;
     }
 
     .sidebar ul li {
-      padding: 12px 0;
-      border-bottom: 1px solid #333;
+      margin: 8px 0;
+      transition: transform 0.2s ease;
+    }
+
+    .sidebar ul li:last-child {
+      margin-bottom: 20px;
+    }
+
+    .sidebar ul li a {
+      display: block;
+      padding: 12px 16px;
       color: #fff;
+      text-decoration: none;
+      font-size: 16px;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease; /* Transição para destaque e zoom */
+      background-color: #2a2a2a;
+      border-radius: 8px;
+      transition: background 0.3s ease, color 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
 
-    /* Efeito de destaque e zoom ao passar o mouse */
     .sidebar ul li:hover {
-      background-color: #ff5f5f; /* Destaque em vermelho */
-      transform: scale(1.05); /* Pequeno zoom */
+      transform: scale(1.03);
     }
 
-    /* Botão de retrair/expandir */
-    .toggle-btn {
-      position: absolute;
-      top: 50%;
-      right: -15px; /* Metade do botão fica para fora do menu */
-      transform: translateY(-50%);
+    .sidebar ul li a:hover {
       background-color: #ff5f5f;
+      color: #000;
+      transform: translateX(5px);
+    }
+
+    .sidebar .submenu {
+      display: block;
+      list-style: none;
+      padding: 0;
+      margin: 0 0 8px 16px;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease; /* Retração rápida */
+    }
+
+    .sidebar .has-submenu:hover .submenu {
+      max-height: 300px; /* Aumentado para evitar corte */
+      transition: max-height 1s ease; /* Expansão lenta */
+    }
+
+    .sidebar .has-submenu:hover ~ li,
+    .sidebar .has-submenu:hover ~ .has-submenu {
+      margin-top: 8px;
+    }
+
+    .sidebar .submenu li {
+      margin: 6px 0;
+      width: 85%; /* Cards menores no submenu */
+    }
+
+    .sidebar .submenu li a {
+      padding: 8px 12px;
+      font-size: 13px;
       color: #fff;
+      display: block;
+      background-color: #3a3a3a;
+      border-radius: 6px;
+      transition: background 0.3s ease, color 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    }
+
+    .sidebar .submenu li a:hover {
+      background-color: #ff5f5f;
+      color: #000;
+      transform: translateX(5px);
+    }
+
+    .sidebar:has(.has-submenu:hover) {
+      height: auto;
+      padding-bottom: 20px;
+    }
+
+    .toggle-btn {
+      position: fixed;
+      top: calc(60px + 20vh - 15px);
+      left: 240px;
+      background-color: #ff5f5f;
       border: none;
       border-radius: 50%;
       width: 30px;
@@ -148,49 +218,58 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 16px;
-      transition: transform 0.3s ease; /* Transição suave do botão */
+      padding: 1px;
+      filter: blur(0.5px);
+      transition: left 0.3s ease, filter 0.3s ease;
+      z-index: 1000;
     }
 
-    /* Ajuste do conteúdo principal quando o menu está retraído */
+    .sidebar.retracted ~ .toggle-btn {
+      left: 0;
+    }
+
+    .toggle-btn img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
     .main-container.retracted {
-      margin-left: 0; /* Remove o espaço do menu lateral */
+      margin-left: 0;
     }
 
-    /* Estilos ajustados para a seção principal (main-content) */
     .main-content {
       flex-grow: 1;
       padding: 60px 40px;
       display: flex;
       flex-direction: column;
-      justify-content: center; /* Centraliza verticalmente */
-      align-items: center; /* Centraliza horizontalmente */
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      width: 100%; /* Garante que o conteúdo ocupe toda a largura disponível */
+      width: 100%;
     }
 
-    /* Contêiner para o título e conteúdo com bordas arredondadas */
     .content-box {
-      background-color: #1a1a1a; /* Fundo escuro para o contêiner */
-      border-radius: 15px; /* Bordas arredondadas suaves */
-      padding: 30px; /* Margem interna para espaçamento */
+      background-color: #1a1a1a;
+      border-radius: 15px;
+      padding: 30px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 700px; /* Limita a largura para melhor visualização */
-      width: 100%; /* Garante que o contêiner se ajuste ao espaço disponível */
+      max-width: 700px;
+      width: 100%;
     }
 
-    /* Estilo do título ajustado */
     .title-container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* Centraliza verticalmente dentro do contêiner */
+      justify-content: center;
     }
 
     h1 {
-      font-size: 40px; /* Tamanho ajustado para "BEM-VINDO" */
+      font-size: 40px;
       margin: 0;
       text-transform: uppercase;
       letter-spacing: 2px;
@@ -198,8 +277,8 @@
     }
 
     .title-highlight {
-      font-size: 60px; /* Fonte maior para "PRIME POKER" */
-      color: #ff5f5f; /* Mesma tonalidade de vermelho */
+      font-size: 60px;
+      color: #ff5f5f;
       margin: 0;
       text-transform: uppercase;
       letter-spacing: 2px;
@@ -208,7 +287,7 @@
 
     h3 {
       color: #aaa;
-      margin: 20px 0; /* Ajustei a margem para melhor espaçamento */
+      margin: 20px 0;
       font-weight: normal;
       font-size: 18px;
     }
@@ -256,7 +335,6 @@
       background: #ff8080;
     }
 
-    /* Estilo do rodapé */
     footer {
       background-color: #1a1a1a;
       padding: 40px 20px;
@@ -339,7 +417,9 @@
 <body>
   <!-- Menu Superior -->
   <div class="navbar">
-    <a href="index.html" class="logo">Prime Poker</a>
+    <a href="index.html" class="logo">
+      <img src="logopequena.png" alt="Prime Poker Logo">
+    </a>
     <div class="nav-links">
       <a href="Produtos.html">Produtos</a>
       <a href="#">Blog</a>
@@ -358,14 +438,29 @@
     <!-- Menu Lateral -->
     <div class="sidebar retracted" id="sidebar">
       <ul>
-        <li>Painel</li>
-        <li>Ebooks</li>
-        <li><a href="Produtos.html" style="color: #fff; text-decoration: none;">Produtos</a></li>
-        <li>Vídeos de Coaching</li>
-        <li>Minha Conta</li>
+        <li><a href="Painel.html">Painel</a></li>
+        <li class="has-submenu">
+          <a href="Produtos.html">Loja</a>
+          <ul class="submenu">
+            <li><a href="Videos.html">Vídeos</a></li>
+            <li><a href="Ebooks.html">Ebooks</a></li>
+          </ul>
+        </li>
+        <li class="has-submenu">
+          <a href="Ranges.html">Ranges</a>
+          <ul class="submenu">
+            <li><a href="RFI10BB.html">RFI 10BB</a></li>
+            <li><a href="RFI20BB.html">RFI 20BB</a></li>
+            <li><a href="RFI40BB.html">RFI 40BB</a></li>
+            <li><a href="RFI50BB.html">RFI 50BB</a></li>
+          </ul>
+        </li>
+        <li><a href="MinhaConta.html">Minha Conta</a></li>
       </ul>
-      <button class="toggle-btn" id="toggle-btn"><i class="fas fa-chevron-right"></i></button>
     </div>
+    <button class="toggle-btn" id="toggle-btn">
+      <img src="botaoretratil.png" alt="Botão Retrátil">
+    </button>
 
     <!-- Seção Principal -->
     <div class="main-content">
@@ -435,10 +530,6 @@
     toggleBtn.addEventListener('click', () => {
       sidebar.classList.toggle('retracted');
       mainContainer.classList.toggle('retracted');
-      // Alterna o ícone do botão entre setas esquerda e direita
-      toggleBtn.innerHTML = sidebar.classList.contains('retracted')
-        ? '<i class="fas fa-chevron-right"></i>'
-        : '<i class="fas fa-chevron-left"></i>';
     });
   </script>
 </body>
